<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_clear_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_support"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/menu_support"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>
